--- a/passwordGeneratorProject/generator/templates/home.html
+++ b/passwordGeneratorProject/generator/templates/home.html
@@ -3,7 +3,7 @@
     
     <label>Wybierz</label>
 
-    <select required>
+    <select required name="length">
     <option value="" selected disabled>Wybierz dłuość</option>
     <option value="6"> 6 znaków</option>
     <option value="7"> 7 znaków</option>
@@ -12,17 +12,22 @@
     
     </select>
 
-    <input type="checkbox" id="checkbox1">
+    <input type="checkbox" id="checkbox1" name="big">
     <label for="checkbox1">Wielkie Litery</label>
 
-    <input type="checkbox" id="checkbox2">
+    <input type="checkbox" id="checkbox2" name="numbers">
     <label for="checkbox2">Liczby</label>
 
-    <input type="checkbox" id="checkbox3">
+    <input type="checkbox" id="checkbox3"name="specials">
     <label for="checkbox3">Znaki specjalne<label>
 
     {%csrf_token%}
     <button type="submit">Wygeneruj hasło</button>    
 </form>
+
+<p><a href ="{%url 'about'%}">About</a></p>
+
+
+
 
 
